// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellContainerMultiSelectOption should render default settings correctly 1`] = `
<TouchableOpacity
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 16,
    }
  }
  testID="cell-container-multiselect-option-base"
>
  <Checkbox
    isSelected={false}
    style={
      Object {
        "marginRight": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View />
  </View>
</TouchableOpacity>
`;

exports[`CellContainerMultiSelectOption should render the proper select state when isSelected is true 1`] = `
<TouchableOpacity
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#037DD619",
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 16,
    }
  }
  testID="cell-container-multiselect-option-base"
>
  <Checkbox
    isSelected={true}
    style={
      Object {
        "marginRight": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View />
  </View>
</TouchableOpacity>
`;
